criação de tabela
aqui criamos uma tabela com informações sobre a experiência profissional.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8EVaQzlly1g?si=293VVvWILE5Dw3rP" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </selection>
+
+    <selection>
+        <h2>Experiência Profissional</h2>
+        <table border="1">
+            <tr>
+                <th>Empresa</th>
+                <th>Cargo</th>
+                <th>Tempo de Experiência</th>
+            </tr>
+            <tr>
+                <td>Empresa A</td>
+                <td>Estagiário</td>
+                <td>6 meses</td>
+            </tr>
+            <tr>
+                <td>Empresa B</td>
+                <td>Programador júnior</td>
+                <td>6 meses</td>
+            </tr>
+        </table>
+    </selection>
+
     <hr>
     <artcle>
         <p> <em>Olá, busco oportunidades de estágo na área de 
